[gd_scene load_steps=6 format=3 uid="uid://5cmhxaqrwwl2"]

[ext_resource type="Script" path="res://scripts/firework_box.gd" id="1_hb45w"]
[ext_resource type="PackedScene" uid="uid://ds1uj7l4uijo8" path="res://assets/firework box.gltf" id="2_xmewj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4478d"]
size = Vector3(1.25, 0.990723, 1.02643)

[sub_resource type="BoxShape3D" id="BoxShape3D_0ujej"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_arne1"]
size = Vector3(1.5, 1.5, 1.5)

[node name="FireworkBox" type="RigidBody3D" groups=["interactable", "moveables"]]
collision_layer = 9
mass = 50.0
gravity_scale = 2.0
lock_rotation = true
script = ExtResource("1_hb45w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.499072, 0.0132141)
shape = SubResource("BoxShape3D_4478d")

[node name="BoxZone" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("BoxShape3D_0ujej")
target_position = Vector3(0, 0, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="WindowZone" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("BoxShape3D_arne1")
target_position = Vector3(0, 0, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="blockbench_export" parent="." instance=ExtResource("2_xmewj")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="coyoteTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="coyoteTime" to="." method="_on_coyote_time_timeout"]
